--- a/WordAddInDemoV2/TaskPane/DocumentStructureView.xaml
+++ b/WordAddInDemoV2/TaskPane/DocumentStructureView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-         <Button Width="100" Height="60" Content="Btn" Click="ButtonBase_OnClick"></Button>   
+       <ItemsControl ItemsSource="{Binding}"/>
     </Grid>
 </UserControl>
