--- a/WordAddInDemoV2/TaskPane/DocumentStructureView.xaml
+++ b/WordAddInDemoV2/TaskPane/DocumentStructureView.xaml
@@ -1,12 +1,95 @@
 ﻿<UserControl x:Class="WordAddInDemoV2.TaskPane.DocumentStructureView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WordAddInDemoV2.TaskPane"
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:dataContainers="clr-namespace:WordAddInDemoV2.DataContainers"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <Style x:Key="ListViewItemStyle"
+               TargetType="{x:Type ListViewItem}">
+            <Setter Property="Height" Value="30" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListViewItem}">
+                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                Background="{TemplateBinding Background}" 
+                                Padding="{TemplateBinding Padding}"
+                                SnapsToDevicePixels="true">
+                            <GridViewRowPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter TargetName="Bd" Property="BorderThickness" Value="1" />
+                                <Setter Property="Foreground" Value="CornflowerBlue" />
+                                <Setter TargetName="Bd" Property="BorderBrush"
+                                        Value="CornflowerBlue" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Bd" Property="BorderThickness"
+                                        Value="2" />
+                                <Setter TargetName="Bd" Property="BorderBrush"
+                                        Value="CornflowerBlue" />
+                                <Setter Property="Foreground" Value="CornflowerBlue" />
+                            </Trigger>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsSelected" Value="true" />
+                                    <Condition Property="Selector.IsSelectionActive" Value="false" />
+                                </MultiTrigger.Conditions>
+                                <Setter TargetName="Bd" Property="BorderThickness" Value="1" />
+                                <Setter Property="Foreground" Value="CornflowerBlue" />
+                            </MultiTrigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground"
+                                        Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-       <ItemsControl ItemsSource="{Binding}"/>
+        <ListView ItemsSource="{Binding}"
+                  ItemContainerStyle="{StaticResource ListViewItemStyle}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Width="60" Header="名称">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate DataType="{x:Type dataContainers:ControlItem}">
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="100" Header="控件类型">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate DataType="{x:Type dataContainers:ControlItem}">
+                                <TextBlock Text="{Binding ControlType}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="50" Header="宽度">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate DataType="{x:Type dataContainers:ControlItem}">
+                                <TextBlock Text="{Binding Width}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="50" Header="高度">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate DataType="{x:Type dataContainers:ControlItem}">
+                                <TextBlock Text="{Binding Height}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </UserControl>
